syntax = "proto3";
option csharp_namespace = "CecoChat.Contracts.User";
package CecoChat.Contracts.User;
import "File.proto";

service FileQuery {
  rpc GetUserFiles(GetUserFilesRequest) returns (GetUserFilesResponse);
}

message GetUserFilesRequest {
}

message GetUserFilesResponse {
  repeated File files = 1;
}
